# cpfetch

./: .coderabbit.yaml  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/cpfetch/: __init__.py  cp_metadata.py  fetch_problem.py
src/cpfetch/cpparse/: __init__.py  fetch.py  lib.py
tests/: conftest.py  test_browser_fetch.py  test_cli.py  test_codechef.py  test_cp_metadata.py  test_fixtures.py  test_lib.py  test_live.py  test_metadata.py  test_platforms.py  test_workflow.py
tests/fixtures/atcoder/: abc233_a.html  abc233_a.json
tests/fixtures/codechef/: flow006.html  flow006.json
tests/fixtures/codeforces/: 1a.html  1a.json
tests/fixtures/cses/: two_sets.html  two_sets.json
tests/fixtures/spoj/: divsum.html  divsum.json  fctrl.html  fctrl.json
tests/testutils/: fixture_data.py  regenerate.py
