[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cpfetch"]

[project]
name = "cpfetch"
version = "0.1.0"
description = "Fetch competitive programming problem statements, samples, and metadata"
requires-python = ">=3.14"
readme = "README.md"
authors = [{name = "famiu"}]
license = {text = "AGPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]

dependencies = [
    "beautifulsoup4",
    "markdownify",
    "playwright",
]

[project.urls]
Repository = "https://github.com/famiu/cpfetch"

[project.scripts]
cpfetch = "cpfetch.fetch_problem:main"

[dependency-groups]
dev = [
    "basedpyright",
    "pytest",
    "ruff",
    "ty",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py314"

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
ignore = ["D107"]

select = [
    "D",
    "E",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "SIM",
    "PTH",
    "RUF",
    "TRY",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"**/__init__.py" = ["D"]

[tool.basedpyright]
typeCheckingMode = "recommended"
exclude = [".venv", "**/__pycache__"]
venvPath = "."
venv = ".venv"
reportAny = false
reportExplicitAny = false

[tool.ty.environment]
python-version = "3.14"

[tool.pytest.ini_options]
markers = [
    "integration: smoke tests that hit live websites",
]
addopts = "-m 'not integration'"
testpaths = ["tests"]
